
    - Bugs fixed:
      . Don't raise the parent of windows sent to the back (#4008)
      . Update wl_output::geometry to include the correct transformation (#4062)
      . `BasicScreenshooter` does not take the output transformation into account (#4086)
      . Screenshots wrong when display rotated (again) (#3909)
      . Docking kgx left/right in miriway is misplaced (#4023)

    - Documentation:
      . HACKING.md: Add some intructions for MESA debugging (#3992)
      . doc: add Debugging section to CI docs (#4034)

 -- Michał Sawicz <michal.sawicz@canonical.com>  Fri, 01 Aug 2025 10:12:26 +0200

mir (2.21.1) UNRELEASED; urgency=medium

  * New upstream release 2.21.1

    - Bugs fixed:
      . binutils 2.44.50.20250616 for arm64 still breaks LTO builds
      . Turn off workaround for now-fixed GLib bug

 -- Alan Griffiths <alan.griffiths@canonical.com>  Thu, 10 Jul 2025 10:56:11 +0100

mir (2.21.0) UNRELEASED; urgency=medium

  * New upstream release 2.21.0

    - ABI summary:
      . miral ABI unchanged at 7
      . mircommon ABI unchanged at 11
      . mircore ABI unchanged at 2
      . miroil ABI unchanged at 7
      . mirplatform ABI bumped to 31
      . mirserver ABI bumped to 64
      . mirwayland ABI unchanged at 5
      . mirplatformgraphics ABI unchanged at 23
      . mirinputplatform ABI unchanged at 10

    - Enhancements:
      . Cursor Scaling Support (#3735)
      . Implement mousekeys (#3757)
      . Add key repeat rate/delay config options and properly merge config settings (#3830)
      . feature: add the ability to associate a layout with custom user data (#3869)
      . static_display_config: add display properties to output (#3903)
      . feature: implement xdg toplevel tiled states (#3920)
      . Update of core wayland extensions (#3927)
      . feature: refactor `BasicSurface` so that it can be used internally by shell authors (#3948)
      . Check DRM for supported formats (#3950)